2008-04-06  Sam Steingold  <sds@gnu.org>

	* describe.lisp (describe-object): update slot access of
	FOREIGN-VARIABLE and FOREIGN-FUNCTION for the fv_version/ff_version
	* documentation.lisp (set-function-documentation): ff_properties is 6
	* foreign1.lisp (foreign-function-in-arg-count): ff_argtypes is 4

2008-04-03  Sam Steingold  <sds@gnu.org>

	* lisparit.d, intprint.d (UDS_to_DIGITS): rename to UDS_to_digits
	(DIGITS): rename to digits_t
	(power_table_entry): rename to power_table_entry_t

2008-04-03  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1790496 ]: float format directive ~ve prints spurious digits
	* lisparit.d (FLOAT-SCALE-EXPONENT): implement
	* constsym.d, subr.f (float_scale_exponent): declare
	* format.lisp (format-scale-exponent-aux, format-scale-exponent): remove
	(format-float-for-e, format-general-float): use
	FLOAT-SCALE-EXPONENT instead of FORMAT-SCALE-EXPONENT

2008-04-02  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1928735 ]: BIGNUM failure
	* intread.d (DIGITS_to_I): drop leading 0s; be extra permissive in the
	initial length check, but perform an overflow check on each erg_len
	increment

2008-04-02  Sam Steingold  <sds@gnu.org>

	* makemake.in (interpreted.mem, halfcompiled.mem): work around an
	msys "feature": ":" after "/" is converted to a ";"

2008-04-02  Vladimir Volovich  <vvv2@users.sourceforge.net>
	Sam Steingold  <sds@gnu.org>

	* makemake.in: quote arguments of "test -n" (fix bug #[ 1932548 ])

2008-04-01  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1931097 ]: cross-compile mode tries to execute intparam
	* makemake.in (PARAMS) [CROSS]: use touch, not executables, for
	intparam and floatparam because the constants are defined in config.h
	(UTILCC) [CROSS]: define to cc instead of $(CC) because the
	utilities (gctrigger et al) must run locally

2008-04-01  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1931101 ]: new-clx QUERY-COLORS wants colors not pixels
	* modules/clx/new-clx/clx.f (XLIB:QUERY-COLORS): expect pixel sequence